tests/resources/SyntaxErrorTest/sources/SemicolonInsteadOfComma.stab.cs
public class C {
	C(int a; int b) {
	}
}
